--- a/server/coins.config.json
+++ b/server/coins.config.json
@@ -1,10 +1,19 @@
-[{
+[
+    {
+        "nameInChinese": "天空币",
+        "nameInEnglish": "skycoin",
+        "symbol": "SKY",
+        "logoURL": "/static/sky.logo.png",
+        "webInterfacePort": "6420",
+        "nodeVersion": "0.24.1"
+    },
+    {
     "nameInChinese": "小贝壳",
     "nameInEnglish": "shellcoin",
     "symbol": "SC2",
     "logoURL": "/static/sc2.logo.png",
     "webInterfacePort": "7520",
-    "version": "0.24.1"
+    "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "喵爪币",
@@ -12,7 +21,7 @@
    "symbol": "MZC",
    "logoURL": "/static/mzc.logo.png",
    "webInterfacePort": "7420",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "安兰德币",
@@ -20,7 +29,7 @@
    "symbol": "ARC",
    "logoURL": "/static/arc.logo.png",
    "webInterfacePort": "7720",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "生命币",
@@ -28,7 +37,7 @@
    "symbol": "ALC",
    "logoURL": "/static/alc.logo.png",
    "webInterfacePort": "8420",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "太阳币2",
@@ -36,7 +45,7 @@
    "symbol": "SUN2",
    "logoURL": "/static/sun2.logo.png",
    "webInterfacePort": "8421",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "石斛币",
@@ -44,7 +53,7 @@
    "symbol": "SHC",
    "logoURL": "/static/shc.logo.png",
    "webInterfacePort": "8460",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "永邦币",
@@ -52,7 +61,7 @@
    "symbol": "YBC",
    "logoURL": "/static/ybc.logo.png",
    "webInterfacePort": "7050",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "金属币",
@@ -60,7 +69,7 @@
    "symbol": "MTLC",
    "logoURL": "/static/mtlc.logo.png",
    "webInterfacePort": "7250",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "新西兰币",
@@ -68,7 +77,7 @@
    "symbol": "NZC",
    "logoURL": "/static/nzc.logo.png",
    "webInterfacePort": "7150",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "斐济币",
@@ -76,7 +85,7 @@
    "symbol": "FJC",
    "logoURL": "/static/fjc.logo.png",
    "webInterfacePort": "7180",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "砖币",
@@ -84,7 +93,7 @@
    "symbol": "BRC",
    "logoURL": "/static/brc.logo.png",
    "webInterfacePort": "7220",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "猪币",
@@ -92,7 +101,7 @@
    "symbol": "PGC",
    "logoURL": "/static/pgc.logo.png",
    "webInterfacePort": "7290",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "酒币",
@@ -100,7 +109,7 @@
    "symbol": "LiQC",
    "logoURL": "/static/liqc.logo.png",
    "webInterfacePort": "7460",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "天使币",
@@ -108,7 +117,7 @@
    "symbol": "AGLC",
    "logoURL": "/static/aglc.logo.png",
    "webInterfacePort": "7490",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "芬兰币",
@@ -116,7 +125,7 @@
    "symbol": "FNC",
    "logoURL": "/static/fnc.logo.png",
    "webInterfacePort": "7550",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "桂币",
@@ -124,7 +133,7 @@
    "symbol": "GUIC",
    "logoURL": "/static/guic.logo.png",
    "webInterfacePort": "7590",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "蓝天币",
@@ -132,7 +141,7 @@
    "symbol": "LanTC",
    "logoURL": "/static/lantc.logo.png",
    "webInterfacePort": "7610",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 },
 {
    "nameInChinese": "天空币",
@@ -140,6 +149,6 @@
    "symbol": "SKY",
    "logoURL": "/static/sky.logo.png",
    "webInterfacePort": "6420",
-   "version": "0.24.1"
+   "nodeVersion": "0.24.1"
 }
 ]
